{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 11,
  "lineage": "68cf6ca7-1f4d-b7a2-31e8-e488f6ebfbda",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d0dd86aa7fe3c8a9",
            "arn": "arn:aws:ec2:eu-central-1:711635244477:instance/i-08988c3978b5f13d3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08988c3978b5f13d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07983ccc302763290",
            "private_dns": "ip-10-0-101-206.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.206",
            "public_ip": "3.125.45.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019ef86b07e38861b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3049c7acda3b806",
            "tags": {
              "Name": "Ansible-main"
            },
            "tags_all": {
              "Name": "Ansible-main"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbb9765327822ffd"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.my-sg",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711635244477:security-group/sg-0dbb9765327822ffd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbb9765327822ffd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_vpc-0786dc31ac9e6c8b6",
            "name_prefix": "",
            "owner_id": "711635244477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_Rules"
            },
            "tags_all": {
              "Name": "SG_Rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0786dc31ac9e6c8b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711635244477:internet-gateway/igw-0595a223eb096e29a",
            "id": "igw-0595a223eb096e29a",
            "owner_id": "711635244477",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            },
            "vpc_id": "vpc-0786dc31ac9e6c8b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0595a223eb096e29a",
            "id": "r-rtb-096da0f3644b1a2841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096da0f3644b1a284",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711635244477:route-table/rtb-096da0f3644b1a284",
            "id": "rtb-096da0f3644b1a284",
            "owner_id": "711635244477",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-vpc-public"
            },
            "tags_all": {
              "Name": "main-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0786dc31ac9e6c8b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a3c8b1328a8b8e9",
            "route_table_id": "rtb-096da0f3644b1a284",
            "subnet_id": "subnet-0f3049c7acda3b806"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711635244477:subnet/subnet-0f3049c7acda3b806",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3049c7acda3b806",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711635244477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "main-vpc-public-eu-central-1a"
            },
            "vpc_id": "vpc-0786dc31ac9e6c8b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711635244477:vpc/vpc-0786dc31ac9e6c8b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088eea3432d14674a",
            "default_route_table_id": "rtb-0421a8308513840b1",
            "default_security_group_id": "sg-03b96fbf247780125",
            "dhcp_options_id": "dopt-05f91dd443990e929",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0786dc31ac9e6c8b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0421a8308513840b1",
            "owner_id": "711635244477",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}